[gd_scene format=3 uid="uid://dh7lnsxp0jimi"]

[ext_resource type="Script" uid="uid://bk85xex8e8724" path="res://scripts/Main.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/Player.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/Asteroid.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/Boss.tscn" id="4"]
[ext_resource type="PackedScene" path="res://scenes/UI.tscn" id="5"]
[ext_resource type="AudioStream" path="res://assets/sounds/shoot.wav" id="6"]
[ext_resource type="AudioStream" path="res://assets/sounds/hit.wav" id="7"]
[ext_resource type="AudioStream" path="res://assets/sounds/levelup.wav" id="8"]
[ext_resource type="AudioStream" path="res://assets/sounds/gameover.wav" id="9"]
[ext_resource type="AudioStream" path="res://assets/sounds/levelup.wav" id="10"]

[node name="Main" type="Node2D" unique_id=500742528]
script = ExtResource("1")
asteroid_scene = ExtResource("3")
boss_scene = ExtResource("4")

[node name="Player" parent="." unique_id=713521747 instance=ExtResource("2")]

[node name="UI" parent="." unique_id=1334638701 instance=ExtResource("5")]

[node name="SpawnTimer" type="Timer" parent="." unique_id=1733629005]
autostart = false

[node name="ShootSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")

[node name="HitSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7")

[node name="LevelupSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8")

[node name="GameoverSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9")

[node name="StartSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10")
